# social-media-clustering

./: .gitignore  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt  setup-smclust.sh
data/: graph.csv
notebooks/: 01_data_preprocessing.ipynb  01_text_minining.ipynb  02_tfidf_clustering.ipynb  03_word2vec_clustering.ipynb  04_dim_reduction_explainer.ipynb  main.ipynb  pca_step_by_step (1).ipynb  tf_idf_analysis.ipynb
scripts/: run_pipeline.py
src/smclust/: cluster.py  config.py  data_loader.py  embeddings.py  metrics.py  preprocessing.py  reduce.py  vectorize.py  viz.py
tests/: test_cluster.py  test_embeddings.py  test_metrics.py  test_preprocessing.py  test_vectorize.py
