[project]
name = "social-media-clustering"
version = "0.1.0"
description = "Unsupervised clustering of social media posts and user analysis"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
